# FaceRecognition

./: .gitignore  CMakeLists.txt  README.md
FaceRecognition/: CMakeLists.txt  FaceRecognitionApp.cpp  FaceRecognitionApp.h  main.cpp  pch.h
FaceRecognition/FaceRecognitionLib/: CMakeLists.txt  FaceDetectionView.cpp  FaceDetectionView.h  FaceRecognition.cpp  FaceRecognition.h  FaceRecognitionView.cpp  FaceRecognitionView.h  Image.cpp  Image.h  Item.cpp  Item.h  LoadingPanel.cpp  LoadingPanel.h  MainFrame.cpp  MainFrame.h  MainPanel.cpp  MainPanel.h  Observer.cpp  Observer.h  Video.cpp  Video.h  ids.h  pch.h
FaceRecognition/ImageResourcesLib/: CMakeLists.txt  ImageMatching.cpp  ImageMatching.h  convertmattowxbmp.cpp  pch.h
FaceRecognitionApp/: CMakeLists.txt  FaceRecognitionApp.cpp  FaceRecognitionApp.h
